refactor: define photos as collection

--- a/src/pages/photos.astro
+++ b/src/pages/photos.astro
@@ -1,338 +1,14 @@
 ---
 import PageLayout from '@/layouts/PageLayout.astro'
 import { Image } from 'astro:assets'
+import { getCollection } from 'astro:content'
 
 const frontmatter = {
   title: 'Photos',
   activeHeaderLink: 'Photos'
 }
 
-const photos = [
-  {
-    label: 'Old Man of Storr, Scotland. August 2024.',
-    url: 'https://pxscdn.com/public/m/_v2/731062847612539415/586f75268-5004eb/3GFMfRFdz2mQ/BguY6r7ZpAD7c6Ed2yk38BEVq19M7s3DWCVToal2.jpg'
-  },
-  {
-    label: 'Old Man of Storr, Scotland. August 2024.',
-    url: 'https://pxscdn.com/public/m/_v2/731062847612539415/586f75268-5004eb/T6U5itAjJT6p/txq8ttWbLpoWQCxJF6Z2TAFlyZkWzR0ibrmuVMRY.jpg'
-  },
-  {
-    label: 'Quiraing, Scotland. August 2024.',
-    url: 'https://pxscdn.com/public/m/_v2/731062847612539415/586f75268-5004eb/j3B73vrylghh/vFFDaORyL0nY5WX1o8i03zNgd7Ij9wStfychdUIe.jpg'
-  },
-  {
-    label: 'Quiraing, Scotland. August 2024.',
-    url: 'https://pxscdn.com/public/m/_v2/731062847612539415/586f75268-5004eb/DvKQXMu7BpTh/1r5oEXaQDuqA1Unqlkmd0NbGe0OuY4uPrbxmyRgH.jpg'
-  },
-  {
-    label: 'Quiraing, Scotland. August 2024.',
-    url: 'https://pxscdn.com/public/m/_v2/731062847612539415/586f75268-5004eb/8syDmTePydu6/2WVb7uKVBsvYnsEetBVzU45YKNU6IT8jmlHh6UX3.jpg'
-  },
-  {
-    label: 'Quiraing, Scotland. August 2024.',
-    url: 'https://pxscdn.com/public/m/_v2/731062847612539415/586f75268-5004eb/TE5IfOQp4EGX/VTPkndzdA1YysnpgSaTis6MtIlBRTymInqECZw8l.jpg'
-  },
-  {
-    label: 'Preikestolen, Stavanger, Norway. July 2024.',
-    url: 'https://pxscdn.com/public/m/_v2/731062847612539415/586f75268-5004eb/t169HoxNottZ/GwHEMnkzmvyf5O4DIipVFNbikbogqJbVK7r5IhnC.jpg'
-  },
-  {
-    label: 'Preikestolen, Stavanger, Norway. July 2024.',
-    url: 'https://pxscdn.com/public/m/_v2/731062847612539415/586f75268-5004eb/l8SgkRZwAV1T/LJNqbc2t6ta6y6yLrSXmz9PZMq9D8RrK9Zt0eYRH.jpg'
-  },
-  {
-    label: 'Nigardsbreen, Norway. July 2023.',
-    url: 'https://pxscdn.com/public/m/_v2/731062847612539415/586f75268-5004eb/0K6rxdwOnOlx/2XW5r1XyUTq8NAUgKDNEhijh8w1aUx1F8V2Jf1le.jpg'
-  },
-  {
-    label: 'Nigardsbreen, Norway. July 2023.',
-    url: 'https://pxscdn.com/public/m/_v2/731062847612539415/586f75268-5004eb/IvN6As9PXvcI/dvGbn7JmyyEtWoWWwL2MojvjGyQfRPndODUYghB9.jpg'
-  },
-  {
-    label: 'Nigardsbreen, Norway. July 2023.',
-    url: 'https://pxscdn.com/public/m/_v2/731062847612539415/586f75268-5004eb/S9aCKCiVVWmJ/jmqlXp416f8iVX80Nbt2jjTk2nuLhgWKRtFl4jY1.jpg'
-  },
-  {
-    label: 'Nigardsbreen, Norway. July 2023.',
-    url: 'https://pxscdn.com/public/m/_v2/731062847612539415/586f75268-5004eb/iK7Lyeoa5Dn7/kVgYlKSJGDdGn4i8fDUpgA1X7ZubBqG69Vvdr6LV.jpg'
-  },
-  {
-    label: 'Nigardsbreen, Norway. July 2023.',
-    url: 'https://pxscdn.com/public/m/_v2/731062847612539415/586f75268-5004eb/tl5GTsKzPCXu/iJmsFgP6THPf4JxORcoYLdIhGKxEEccrqN2uPPTD.jpg'
-  },
-  {
-    label: 'Nigardsbreen, Norway. July 2023.',
-    url: 'https://pxscdn.com/public/m/_v2/731062847612539415/586f75268-5004eb/bT4vN5MOMzY3/2N3rtyndacscJYaRS366FjYPoZXfW67zOassyTlq.jpg'
-  },
-  {
-    label: 'Vestkapp, Norway. July 2023.',
-    url: 'https://pxscdn.com/public/m/_v2/731062847612539415/586f75268-5004eb/HZC2rQeppihl/YBybbvgR23zHOvPozpAxE0puuc3OTBgMGjRPJShC.jpg'
-  },
-  {
-    label: 'Vestkapp, Norway. July 2023.',
-    url: 'https://pxscdn.com/public/m/_v2/731062847612539415/586f75268-5004eb/wPdNlH1ZWuMt/nSU37bi4xVuboa1oHoSQnuFeLP5xK7C9fhZZLmjP.jpg'
-  },
-  {
-    label: 'Vestkapp, Norway. July 2023.',
-    url: 'https://pxscdn.com/public/m/_v2/731062847612539415/586f75268-5004eb/PO7TH7HSP5Y5/hRpPTqw5MXhKjwOjiG0BNTwyAGOWzsRtbuW9vdPB.jpg'
-  },
-  {
-    label: 'Trollstigen, Norway. July 2023.',
-    url: 'https://pxscdn.com/public/m/_v2/731062847612539415/586f75268-5004eb/qe6aCNwbeDU0/FEABiSysxa66l8pBWcMT1RsqVHMK0krSEHcBdzEI.jpg'
-  },
-  {
-    label: 'Lovatnet, Norway. July 2023.',
-    url: 'https://pxscdn.com/public/m/_v2/731062847612539415/586f75268-5004eb/Hec8LmjAbT1z/Nab9PNt2WAxPiNjtfrJFL1WCrVzdr6fQ7rdQYGTx.jpg'
-  },
-  {
-    label: 'Lovatnet, Norway. July 2023.',
-    url: 'https://pxscdn.com/public/m/_v2/731062847612539415/586f75268-5004eb/9ZoeGd2uw1dx/iJR2up0trvel4tVANJmm21i1nI76SKgAJT0N4xMG.jpg'
-  },
-  {
-    label: 'Lovatnet, Norway. July 2023.',
-    url: 'https://pxscdn.com/public/m/_v2/731062847612539415/586f75268-5004eb/KcdjQeUbaSZw/8lHviJAsX5W8xOXrrGcvx8rbOH306Dh6nZUSnUMA.jpg'
-  },
-  {
-    label: 'Geirangerfjord, Norway. July 2023.',
-    url: 'https://pxscdn.com/public/m/_v2/731062847612539415/586f75268-5004eb/SmeZ2o0dyndy/bEQEssGXzuyyfDImMyf7SDztmlMknF5Mlf1rva2u.jpg'
-  },
-  {
-    label: 'Geirangerfjord, Norway. July 2023.',
-    url: 'https://pxscdn.com/public/m/_v2/731062847612539415/586f75268-5004eb/KDmDhhaIrBH1/np394Urp6BZ7CBcKGr3QjHA3Or2WXBJmtDTcU7zm.jpg'
-  },
-  {
-    label: 'Sognefjord, Norway. April 2023.',
-    url: 'https://pxscdn.com/public/m/_v2/731062847612539415/586f75268-5004eb/LlxkEkyCzkUt/rb4EgL2EwHuCQOEJchZtdSS58dJuZyIdxhrYhMyE.jpg'
-  },
-  {
-    label: 'Sognefjord, Norway. April 2023.',
-    url: 'https://pxscdn.com/public/m/_v2/731062847612539415/586f75268-5004eb/HnueJmB1wPaq/LiJovoNeWDooAe1HtmFKTvAPUreQ1G3nLt2yY0D0.jpg'
-  },
-  {
-    label: 'Sognefjord, Norway. April 2023.',
-    url: 'https://pxscdn.com/public/m/_v2/731062847612539415/586f75268-5004eb/L9X3YFDTmR1K/pZS08NnyFhKvGV4M7IoDTbfsGgJjMwyr4TQuiZtf.jpg'
-  },
-  {
-    label: 'Myrkdalen, Norway. April 2023.',
-    url: 'https://pxscdn.com/public/m/_v2/731062847612539415/586f75268-5004eb/jdF9q7JyHCQU/I6HTJragFA1TWy3iXBHdGXV7ieqGKJ7GIWobbEw6.jpg'
-  },
-  {
-    label: 'Myrkdalen, Norway. April 2023.',
-    url: 'https://pxscdn.com/public/m/_v2/731062847612539415/586f75268-5004eb/eix7oPDxOUWK/NQK4p4t2RFKe6S3H9JND6i3fPfZicqPI5skT6mHT.jpg'
-  },
-  {
-    label: 'Myrkdalen, Norway. April 2023.',
-    url: 'https://pxscdn.com/public/m/_v2/731062847612539415/586f75268-5004eb/gytemnphwCfX/Ei6L7dDrGC78Oljehd5VL1l4XZTPHqS60tuD7xEL.jpg'
-  },
-  {
-    label: 'Myrkdalen, Norway. April 2023.',
-    url: 'https://pxscdn.com/public/m/_v2/731062847612539415/586f75268-5004eb/nQFkBSMy5Oa4/vF615HGVjje3Ie0mQHkMlcHxIkPU66CRonS4k7Eo.jpg'
-  },
-  {
-    label: 'Rosengarten, Carezza, Italy. January 2023.',
-    url: 'https://pxscdn.com/public/m/_v2/731062847612539415/586f75268-5004eb/RaSGrC6lA5xu/KK779dlvIvSQYWZ9R3aeXwOaZfJIqmTQu017lKNO.jpg'
-  },
-  {
-    label: 'Rosengarten, Carezza, Italy. January 2023.',
-    url: 'https://pxscdn.com/public/m/_v2/731062847612539415/586f75268-5004eb/2v1FWwcUIaxR/gdTEw4MP8Wk7pYqbZHBgYHqBxn7uWXQzGddRlfh9.jpg'
-  },
-  {
-    label: 'Latemar, Carezza, Italy. January 2023.',
-    url: 'https://pxscdn.com/public/m/_v2/731062847612539415/586f75268-5004eb/onnBWUj3NWuH/JB3xombu2U4qgHirrTI9xcHTP7hEkleM26vAF7dq.jpg'
-  },
-  {
-    label: 'Latemar, Carezza, Italy. January 2023.',
-    url: 'https://pxscdn.com/public/m/_v2/731062847612539415/586f75268-5004eb/nfeOtxdKCHFC/ZUNtmMHnWsOsgy19o97yauLKgH6xwUqwwKsXyG4W.jpg'
-  },
-  {
-    label: 'Latemar, Carezza, Italy. January 2023.',
-    url: 'https://pxscdn.com/public/m/_v2/731062847612539415/586f75268-5004eb/uMt16FnxN4RS/J1ZgF6ndPHs6tORKESa6mk4EWcoap6QO7JGPDKjH.jpg'
-  },
-  {
-    label: 'Latemar, Carezza, Italy. January 2023.',
-    url: 'https://pxscdn.com/public/m/_v2/731062847612539415/586f75268-5004eb/aHahL3HEijUw/hppNcLNhi7u0WyMOfm8hHjgVWzisComchprYKEwM.jpg'
-  },
-  {
-    label: 'Ulriken, Bergen, Norway. September 2022.',
-    url: 'https://pxscdn.com/public/m/_v2/731062847612539415/586f75268-5004eb/INR7wewnRYuQ/4Lohd6Z4qoV6Jg8xQfk8MPH4P6doNVhLEAvOsn5k.jpg'
-  },
-  {
-    label: 'Ulriken, Bergen, Norway. September 2022.',
-    url: 'https://pxscdn.com/public/m/_v2/731062847612539415/586f75268-5004eb/ZnoIZ0aTWSPS/KehORskN8qypylGTanJakvszKzHMl9MBMGLj2hbK.jpg'
-  },
-  {
-    label: 'Ulriken, Bergen, Norway. September 2022.',
-    url: 'https://pxscdn.com/public/m/_v2/731062847612539415/586f75268-5004eb/mPxJzR4Ohbg2/t60tnwsQTJrBm4rkKJWoREJHuGQlPOeg2ZEbyvKq.jpg'
-  },
-  {
-    label: 'Ryten, Lofoten, Norway. July 2022.',
-    url: 'https://pxscdn.com/public/m/_v2/731062847612539415/586f75268-5004eb/X0wyrW1wC8z3/aZvsSKWkW33ynJzNz7KEaEx4qR9M87oFAU4Qgp7Z.jpg'
-  },
-  {
-    label: 'Ryten, Lofoten, Norway. July 2022.',
-    url: 'https://pxscdn.com/public/m/_v2/731062847612539415/586f75268-5004eb/b16PMDHYwRS3/dfHQv0n8o8MSUwejlpIr67UDswHqf7uq8uKRFrMk.jpg'
-  },
-  {
-    label: 'Ryten, Lofoten, Norway. July 2022.',
-    url: 'https://pxscdn.com/public/m/_v2/731062847612539415/586f75268-5004eb/jtF3L1nQHBqM/v5PSa298uiCkD0ScsEUuEVmlEeRXxOVrVrFcZwRB.jpg'
-  },
-  {
-    label: 'Ryten, Lofoten, Norway. July 2022.',
-    url: 'https://pxscdn.com/public/m/_v2/731062847612539415/586f75268-5004eb/ptZOIniarRch/nIApXP2PDfrO4jJZ48k85tKDPICnBS1CUymOVJ9U.jpg'
-  },
-  {
-    label: 'Brunstranda & Nusfjord, Lofoten, Norway. July 2022.',
-    url: 'https://pxscdn.com/public/m/_v2/731062847612539415/586f75268-5004eb/loBKfGFMzRjo/AI5ycqbi1l1SBAVbtH0OAoojuhp0ypFSbJWiC509.jpg'
-  },
-  {
-    label: 'Brunstranda & Nusfjord, Lofoten, Norway. July 2022.',
-    url: 'https://pxscdn.com/public/m/_v2/731062847612539415/586f75268-5004eb/LT6AAxUCPodN/u28WWkJNzqhcyWz6z7HKZ4w6AK3IUtgiLFd9dIvM.jpg'
-  },
-  {
-    label: 'Brunstranda & Nusfjord, Lofoten, Norway. July 2022.',
-    url: 'https://pxscdn.com/public/m/_v2/731062847612539415/586f75268-5004eb/u1ZG93B2f7iD/f01VfTHfK1NAztx70z4LqowsjM1FgNJqWBGro4P4.jpg'
-  },
-  {
-    label: 'Brunstranda & Nusfjord, Lofoten, Norway. July 2022.',
-    url: 'https://pxscdn.com/public/m/_v2/731062847612539415/586f75268-5004eb/gStcn3JFdrub/VSakv35Oh5Hsyg4qqkWDOrC6ICmOGtdXesmyU9SD.jpg'
-  },
-  {
-    label: 'Reinebringen, Lofoten, Norway. July 2022.',
-    url: 'https://pxscdn.com/public/m/_v2/731062847612539415/586f75268-5004eb/VjwFMaamR08m/9BquGdMfNvwaJpou24hfQhkOZ80N0jR9XTg5kc6U.jpg'
-  },
-  {
-    label: 'Ramberg, Lofoten, Norway. July 2022.',
-    url: 'https://pxscdn.com/public/m/_v2/731062847612539415/586f75268-5004eb/8trchwRVpU1M/l3AJTLFruwrySYngPC2oWrhp0TWrgA38klhrRvVf.jpg'
-  },
-  {
-    label: 'Ramberg, Lofoten, Norway. July 2022.',
-    url: 'https://pxscdn.com/public/m/_v2/731062847612539415/586f75268-5004eb/SdeL1ZlRhQy4/l714f6b0wy9wum2NbcEH7Wl8j5cJjxwCLzBPQwBr.jpg'
-  },
-  {
-    label: 'Ramberg, Lofoten, Norway. July 2022.',
-    url: 'https://pxscdn.com/public/m/_v2/731062847612539415/586f75268-5004eb/pbzaM3usZVQp/GEClF56FZaTBfU6cp32juB4yor2H5dahveX9Vy7G.jpg'
-  },
-  {
-    label: 'Haukland, Lofoten, Norway. July 2022.',
-    url: 'https://pxscdn.com/public/m/_v2/731062847612539415/586f75268-5004eb/j1hENcSfbIhG/Hw1UwTwRHOpdWxO3HAuj0LsBeZ3OuofhoeOOUx3h.jpg'
-  },
-  {
-    label: 'Haukland, Lofoten, Norway. July 2022.',
-    url: 'https://pxscdn.com/public/m/_v2/731062847612539415/586f75268-5004eb/dPtOdswTamwK/yy0085EzTIwOemuwfLMT0WpZ0GTdwxl5zfqKu8Lj.jpg'
-  },
-  {
-    label: 'Haukland, Lofoten, Norway. July 2022.',
-    url: 'https://pxscdn.com/public/m/_v2/731062847612539415/586f75268-5004eb/qaXtugKIRT4A/6zO8t6nnaHkzgHpv3YycaUwl9vqi05e3vAuMkD1Q.jpg'
-  },
-  {
-    label: 'Haukland, Lofoten, Norway. July 2022.',
-    url: 'https://pxscdn.com/public/m/_v2/731062847612539415/586f75268-5004eb/7SxePvq6zTBx/HL6HI60D5roq6cWmxFKRrdPMDnIDHiKqiO4L3I3C.jpg'
-  },
-  {
-    label: 'Carezza, Italy. July 2022.',
-    url: 'https://pxscdn.com/public/m/_v2/731062847612539415/586f75268-5004eb/hjX1AAKhD3c4/nR0A9LHcB6IYeE7aWZI2hF3N6kGPFeCaQEKMGJOg.jpg'
-  },
-  {
-    label: 'Carezza, Italy. July 2022.',
-    url: 'https://pxscdn.com/public/m/_v2/731062847612539415/586f75268-5004eb/EMMzC50P1jv5/z8IsBz5v51JDyP12nAK7zxHmSGKW5gbMlGNPoovZ.jpg'
-  },
-  {
-    label: 'Carezza, Italy. July 2022.',
-    url: 'https://pxscdn.com/public/m/_v2/731062847612539415/586f75268-5004eb/F0VBn7fPpNTV/vb2BxVEkvAFOMWvaiXj1VnHRtfCRWCTNTwuwqCBF.jpg'
-  },
-  {
-    label: 'Carezza, Italy. July 2022.',
-    url: 'https://pxscdn.com/public/m/_v2/731062847612539415/586f75268-5004eb/HUUWDB8T9ghU/OJCLWKkk4slJnzKqhcmdA5DnnRGMInUGqNiuBcbx.jpg'
-  },
-  {
-    label: 'Langafjelltjørna, Askøy, Norway. April 2022.',
-    url: 'https://pxscdn.com/public/m/_v2/731062847612539415/586f75268-5004eb/OU5kLOhAjAk8/hdInFrBNnooAbKDsFpq0aoO6NZ1XICEMaOipEof9.jpg'
-  },
-  {
-    label: 'Langafjelltjørna, Askøy, Norway. April 2022.',
-    url: 'https://pxscdn.com/public/m/_v2/731062847612539415/586f75268-5004eb/CxJeeOtlkLXZ/eeMBsVW0rUq0cn7vjTviXrzPt4g3qatX16pWDYrr.jpg'
-  },
-  {
-    label: 'Låtefossen, Hardanger, Norway. April 2022',
-    url: 'https://pxscdn.com/public/m/_v2/731062847612539415/586f75268-5004eb/c4SRacHBWfND/Jk6wL4lVKlSsC62mPn6HWpH0PK2wPh2KrJLGNcIs.jpg'
-  },
-  {
-    label: 'Låtefossen, Hardanger, Norway. April 2022',
-    url: 'https://pxscdn.com/public/m/_v2/731062847612539415/586f75268-5004eb/g2cleVKjkUpG/fkSWK86ouYsA3EgvYkps9wYUHvdFk8YBEwYxFaBr.jpg'
-  },
-  {
-    label: 'Bondhusvatnet, Hardanger, Norway. April 2022',
-    url: 'https://pxscdn.com/public/m/_v2/731062847612539415/586f75268-5004eb/LhZwEH5mGjum/4znkZT0LFfRw7lvzZh0tVwXm6qu4JfedzhP9ya0j.jpg'
-  },
-  {
-    label: 'Bondhusvatnet, Hardanger, Norway. April 2022',
-    url: 'https://pxscdn.com/public/m/_v2/731062847612539415/586f75268-5004eb/lWDmy4x6cFQK/skBoclIPjD3FsRtxnyDAr2Pt8FHgZjeBJarpBmGf.jpg'
-  },
-  {
-    label: 'Bondhusvatnet, Hardanger, Norway. April 2022',
-    url: 'https://pxscdn.com/public/m/_v2/731062847612539415/586f75268-5004eb/HZGtVnVv307A/LcYgodflsOOvOkvoy18oLiqkS3cSP3QrJgKriusS.jpg'
-  },
-  {
-    label: 'Hardangerfjord, Norway. April 2022',
-    url: 'https://pxscdn.com/public/m/_v2/731062847612539415/586f75268-5004eb/YKy3IMexXBeM/VPg0tndQEO1ROUxO61dgiMckRzrOzWtufKH6a8sM.jpg'
-  },
-  {
-    label: 'Hardangerfjord, Norway. April 2022',
-    url: 'https://pxscdn.com/public/m/_v2/731062847612539415/586f75268-5004eb/x7MBUy2hnAxB/HWjRSyzUKEiDZeWSBLPgsZhIGzA7qeKwETMU5nZG.jpg'
-  },
-  {
-    label: 'Hardangerfjord, Norway. April 2022',
-    url: 'https://pxscdn.com/public/m/_v2/731062847612539415/586f75268-5004eb/qyXpUCqgB0Xc/bnjgCjpDEnvsqx1VO4S5IhXfc4CFchYWlw0ttQrQ.jpg'
-  },
-  {
-    label: 'Hardangerfjord, Norway. April 2022',
-    url: 'https://pxscdn.com/public/m/_v2/731062847612539415/586f75268-5004eb/FIVjNQBhSCmy/1q1nCYah1a5uae5A01q1NF21ogsqSWoXDUyCrh4V.jpg'
-  },
-  {
-    label: 'Folgefonna glacier, Hardanger, Norway. April 2022',
-    url: 'https://pxscdn.com/public/m/_v2/731062847612539415/586f75268-5004eb/CW1QC7m9Rbd9/DpERWr9q72LVlYIbDGtE7ZmIQ5zJBwfrMK7NkQeJ.jpg'
-  },
-  {
-    label: 'Folgefonna glacier, Hardanger, Norway. April 2022',
-    url: 'https://pxscdn.com/public/m/_v2/731062847612539415/586f75268-5004eb/aB3prSfXDkH5/g4qS1MxFLNgcMbIRq2HHyWuSQ9udSJesYEiMKCWj.jpg'
-  },
-  {
-    label: 'Folgefonna glacier, Hardanger, Norway. April 2022',
-    url: 'https://pxscdn.com/public/m/_v2/731062847612539415/586f75268-5004eb/8h20cD1uDmIi/32ysDqwzGiUUAl3kYSM2TXyewKkL3CDAay1eqFM0.jpg'
-  },
-  {
-    label: 'Folgefonna glacier, Hardanger, Norway. April 2022',
-    url: 'https://pxscdn.com/public/m/_v2/731062847612539415/586f75268-5004eb/W0CEDxi3vohx/2CAvwdD6JPJxpyrNvKH2ilsMAoQw9VgFfNQEpogF.jpg'
-  },
-  {
-    label: 'Ørdalsfossen, Hardangerfjord, Norway. April 2022',
-    url: 'https://pxscdn.com/public/m/_v2/731062847612539415/586f75268-5004eb/rYAKmJAyqd3m/tdPYo9TXTXiPnzdbL2GunvruS0r3Rn6iwT38b7Oz.jpg'
-  },
-  {
-    label: 'Ørdalsfossen, Hardangerfjord, Norway. April 2022',
-    url: 'https://pxscdn.com/public/m/_v2/731062847612539415/586f75268-5004eb/9Ip3qBu8IjEu/S8f1NoXPuki2fLf4FpPY9WURLAj24gHpv78ySeGZ.jpg'
-  },
-  {
-    label: 'Ørdalsfossen, Hardangerfjord, Norway. April 2022',
-    url: 'https://pxscdn.com/public/m/_v2/731062847612539415/586f75268-5004eb/HQB7nGe54eUY/t4rgK5nPtX7xakw7O3MQ4Pa17h3RFgfor2Vv4TO5.jpg'
-  },
-  {
-    label: 'Hardangerfjord, Norway. September 2021.',
-    url: 'https://pxscdn.com/public/m/_v2/731062847612539415/0e43b1202-69768b/MHlwXSycXfnf/NDBHYa2PyIgMl2SgLAHJkaKBWy2NftQ1067okjHh.jpg'
-  },
-  {
-    label: 'Hardangerfjord, Norway. September 2021.',
-    url: 'https://pxscdn.com/public/m/_v2/731062847612539415/0e43b1202-69768b/CeHdoFepYBTi/tv0vwYmAFXKx1plavOKHujtX24XzDphScfByx0BR.jpg'
-  },
-  {
-    label: 'Hardangerfjord, Norway. September 2021.',
-    url: 'https://pxscdn.com/public/m/_v2/731062847612539415/0e43b1202-69768b/9S6JJbn6U7BA/sZeZhQIDcvpgR3TdmAicY1YFEvDzUOFPLwdr5vnL.jpg'
-  },
-  {
-    label: 'Hardangerfjord, Norway. September 2021.',
-    url: 'https://pxscdn.com/public/m/_v2/731062847612539415/0e43b1202-69768b/NSsTIrMmbZo0/3wDrx8IGdKW7lREFXga5zVG0txt9RD86RShb2IP7.jpg'
-  }
-]
+const photos = await getCollection('photos')
 ---
 
 <PageLayout {frontmatter}>
@@ -350,16 +26,16 @@ const photos = [
       photos.map((photo) => (
         <div class="group relative">
           <Image
-            src={photo.url}
-            title={photo.label}
-            alt={photo.label}
+            src={photo.data.url}
+            title={photo.data.label}
+            alt={photo.data.label}
             inferSize
             data-img-embed
             data-action="zoom"
             class="mt-0 mr-0 mb-0 ml-0 rounded-none! border-0! pb-2"
           />
           <div class="pointer-events-none absolute inset-0 mb-2 flex items-end justify-center bg-black/65 p-2 text-start text-sm text-white opacity-0 transition duration-500 ease-in-out group-hover:opacity-100">
-            {photo.label}
+            {photo.data.label}
           </div>
         </div>
       ))
