chore: update to nordlys@3.2.0

--- a/src/components/Dropdown.astro
+++ b/src/components/Dropdown.astro
@@ -32,7 +32,7 @@ const menuId = generateItemId(`${label}-menu`)
     aria-expanded="false"
     class:list={[
       'flex cursor-pointer items-center gap-1 whitespace-nowrap',
-      { 'text-accent/100': isActive },
+      { 'text-accent': isActive },
       { clickable: !isActive }
     ]}
   >
