--- a/src/components/layout/HeaderItem.astro
+++ b/src/components/layout/HeaderItem.astro
@@ -19,7 +19,7 @@ const {
 <a
   href={href}
   class={`flex items-center gap-1 whitespace-nowrap ${
-    isActive ? 'text-accent/100' : 'clickable'
+    isActive ? 'text-accent' : 'clickable'
   }`}
   target={isAbsolute(href) ? '_blank' : '_self'}
   {role}
