--- a/src/components/posts/PostsList.astro
+++ b/src/components/posts/PostsList.astro
@@ -1,8 +1,8 @@
 ---
-import PostPreview from '@/components/PostPreview.astro'
 import Separator from '@/components/layout/Separator.astro'
 import { sortPosts } from '@/util/posts'
 import type { CollectionEntry } from 'astro:content'
+import PostsListItem from './PostsListItem.astro'
 
 export interface Props {
   posts: CollectionEntry<'posts'>[]
@@ -17,7 +17,7 @@ posts.sort(sortPosts)
   {
     posts.map((post, index) => (
       <li class="pl-0">
-        <PostPreview {post} />
+        <PostsListItem {post} />
         {index !== posts.length - 1 && <Separator class="mt-6 mb-6" />}
       </li>
     ))
