--- a/src/layouts/LandingLayout.astro
+++ b/src/layouts/LandingLayout.astro
@@ -21,7 +21,7 @@ const latestPost = (await getPosts())[0]
 
 <BaseLayout frontmatter={frontmatter}>
   <div
-    class="mx-auto flex min-h-[100svh] w-full max-w-[90%] flex-col justify-between md:max-w-3xl"
+    class="mx-auto flex min-h-svh w-full max-w-[90%] flex-col justify-between md:max-w-3xl"
   >
     <div class="mt-16 px-4 sm:mt-36 sm:px-12">
       <main id="main">
