--- a/src/layouts/PageLayout.astro
+++ b/src/layouts/PageLayout.astro
@@ -30,7 +30,7 @@ const {
 
 <BaseLayout frontmatter={frontmatter}>
   <div
-    class="mx-auto flex min-h-[100svh] w-full max-w-[90%] flex-col justify-between md:max-w-3xl"
+    class="mx-auto flex min-h-svh w-full max-w-[90%] flex-col justify-between md:max-w-3xl"
   >
     <Header activeHeaderLink={activeHeaderLink} />
     <slot name="top" />
