--- a/src/pages/tags/[tag].astro
+++ b/src/pages/tags/[tag].astro
@@ -1,6 +1,6 @@
 ---
-import PostsList from '@/components/PostsList.astro'
-import ProjectsList from '@/components/ProjectsList.astro'
+import PostsList from '@/components/posts/PostsList.astro'
+import ProjectsList from '@/components/projects/ProjectsList.astro'
 import PageLayout, {
   type Props as PageLayoutProps
 } from '@/layouts/PageLayout.astro'
