--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -18,7 +18,7 @@ const { gradient, background, logo: showLogo } = Astro.props.frontmatter
     class:list={[
       'text-accent relative mb-1 w-fit pb-2 font-bold tracking-tight sm:mb-2',
       {
-        'from-accent/100 via-accent/75 to-accent/50 bg-linear-to-r bg-clip-text text-transparent':
+        'from-accent via-accent/75 to-accent/50 bg-linear-to-r bg-clip-text text-transparent':
           gradient
       },
       {
@@ -27,14 +27,14 @@ const { gradient, background, logo: showLogo } = Astro.props.frontmatter
       { 'text-4xl sm:text-7xl': showLogo, 'text-5xl sm:text-8xl': !showLogo }
     ]}
   >
-    <div class="flex items-center gap-4 sm:gap-8">
+    <div class="flex items-center gap-4 sm:gap-8" transition:name="branding">
       {
         showLogo && (
           <Image
             loading="eager"
             alt="Nordlys logo, a drawing of two gray mountains with green northern lights in the background"
             src={logo}
-            class="h-[48px] w-fit object-scale-down sm:h-24"
+            class="h-12 w-fit object-scale-down sm:h-24"
           />
         )
       }
