--- a/src/pages/authors/[author].astro
+++ b/src/pages/authors/[author].astro
@@ -1,5 +1,5 @@
 ---
-import PostsList from '@/components/PostsList.astro'
+import PostsList from '@/components/posts/PostsList.astro'
 import PageLayout, {
   type Props as PageLayoutProps
 } from '@/layouts/PageLayout.astro'
