--- a/src/pages/posts/[page].astro
+++ b/src/pages/posts/[page].astro
@@ -1,11 +1,12 @@
 ---
 import Pagination from '@/components/Pagination.astro'
-import PostsList from '@/components/PostsList.astro'
+import PostsGrid from '@/components/posts/PostsGrid.astro'
+import PostsList from '@/components/posts/PostsList.astro'
 import PageLayout, {
   type Props as PageLayoutProps
 } from '@/layouts/PageLayout.astro'
 import config from '@/theme.config'
-import { getPosts } from '@/util/posts'
+import { getPosts, getPostsPageDescription } from '@/util/posts'
 import type { GetStaticPaths, InferGetStaticPropsType } from 'astro'
 
 export const getStaticPaths = (async ({ paginate }) => {
@@ -22,6 +23,8 @@ const frontmatter: PageLayoutProps['frontmatter'] = {
   title: 'Posts',
   activeHeaderLink: 'Blog'
 }
+
+const PageDescription = getPostsPageDescription()
 ---
 
 <PageLayout {frontmatter}>
@@ -29,7 +32,11 @@ const frontmatter: PageLayoutProps['frontmatter'] = {
     {frontmatter.title}
     {page.currentPage > 1 && <span>{` (page ${page.currentPage})`}</span>}
   </h1>
-  <PostsList posts={page.data} />
+
+  {PageDescription && <PageDescription />}
+
+  {config.postsView === 'list' && <PostsList posts={page.data} />}
+  {config.postsView === 'grid' && <PostsGrid posts={page.data} />}
 
   <Pagination slot="bottom" page={page} />
 </PageLayout>
