--- a/src/pages/projects/[...page].astro
+++ b/src/pages/projects/[...page].astro
@@ -1,11 +1,12 @@
 ---
 import Pagination from '@/components/Pagination.astro'
-import ProjectsList from '@/components/ProjectsList.astro'
+import ProjectsGrid from '@/components/projects/ProjectsGrid.astro'
+import ProjectsList from '@/components/projects/ProjectsList.astro'
 import PageLayout, {
   type Props as PageLayoutProps
 } from '@/layouts/PageLayout.astro'
 import config from '@/theme.config'
-import { getProjects } from '@/util/projects'
+import { getProjects, getProjectsPageDescription } from '@/util/projects'
 import type { GetStaticPaths, InferGetStaticPropsType } from 'astro'
 
 export const getStaticPaths = (async ({ paginate }) => {
@@ -23,13 +24,19 @@ const frontmatter: PageLayoutProps['frontmatter'] = {
   activeHeaderLink: 'Projects',
   canonicalURL: new URL('/projects/1', Astro.site).toString()
 }
+
+const PageDescription = getProjectsPageDescription()
 ---
 
 <PageLayout {frontmatter}>
   <h1>
     {frontmatter.title}
   </h1>
-  <ProjectsList projects={page.data} />
+
+  {PageDescription && <PageDescription />}
+
+  {config.projectsView === 'list' && <ProjectsList projects={page.data} />}
+  {config.projectsView === 'grid' && <ProjectsGrid projects={page.data} />}
 
   <Pagination slot="bottom" page={page} />
 </PageLayout>
