chore: update to nordlys@3.4.0

--- a/src/components/layout/Header.astro
+++ b/src/components/layout/Header.astro
@@ -33,7 +33,7 @@ export const isNavItem = (item: HeaderItemType): item is NavItemType =>
       transition:name="branding"
     >
       <Image
-        alt="Nordlys logo, a drawing of two gray mountains with green northern lights in the background"
+        alt="Nordlys logo, simplified northern lights aurora visualization"
         src={logo}
         height={24}
         loading="eager"
