--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -4,23 +4,18 @@ import { Image } from 'astro:assets'
 
 export interface Props {
   frontmatter: Partial<{
-    gradient: boolean
     background: boolean
     logo: boolean
   }>
 }
 
-const { gradient, background, logo: showLogo } = Astro.props.frontmatter
+const { background, logo: showLogo } = Astro.props.frontmatter
 ---
 
 <div class="w-fit">
   <div
     class:list={[
       'text-accent relative mb-1 w-fit pb-2 text-4xl font-bold tracking-tight sm:mb-2 sm:text-7xl',
-      {
-        'from-accent via-accent/75 to-accent/50 bg-linear-to-r bg-clip-text text-transparent':
-          gradient
-      },
       {
         'mb-2 sm:mb-8': background
       }
@@ -38,7 +33,7 @@ const { gradient, background, logo: showLogo } = Astro.props.frontmatter
         showLogo && (
           <Image
             loading="eager"
-            alt="Nordlys logo, a drawing of two gray mountains with green northern lights in the background"
+            alt="Nordlys logo, simplified northern lights aurora visualization"
             src={logo}
             class="h-12 w-fit object-scale-down sm:h-24"
           />
